[gd_scene load_steps=10 format=3 uid="uid://juvf0iaoakm6"]

[ext_resource type="Texture2D" uid="uid://dov1llsjkud6v" path="res://assets/ui/UIbg.png" id="1_07rgv"]
[ext_resource type="Script" path="res://scenes/gameover/game_over.gd" id="1_b6trx"]
[ext_resource type="FontFile" uid="uid://bnhn27lx8rhun" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_2oaob"]
[ext_resource type="LabelSettings" uid="uid://m834upvncr2m" path="res://assets/gm_32_dark.tres" id="3_feamh"]
[ext_resource type="Texture2D" uid="uid://dfbfg6o81bnhg" path="res://assets/ui/blue_button00.png" id="4_y5nwe"]
[ext_resource type="Texture2D" uid="uid://dk04wxnhj84st" path="res://assets/ui/yellow_button00.png" id="5_6aeub"]
[ext_resource type="Texture2D" uid="uid://btb3udgdgm772" path="res://assets/ui/green_button00.png" id="6_t8d6j"]
[ext_resource type="LabelSettings" uid="uid://biqej8ur7x57o" path="res://assets/GM_32_White.tres" id="7_jrfky"]

[sub_resource type="LabelSettings" id="LabelSettings_4gvc3"]
font = ExtResource("2_2oaob")
font_size = 84
font_color = Color(0.424842, 1, 0.604434, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.482353)
shadow_offset = Vector2(5, 5)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6trx")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -192.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_07rgv")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MC" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="NinePatchRect/MC"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="NinePatchRect/MC/VB"]
layout_mode = 2
text = "Result"
label_settings = SubResource("LabelSettings_4gvc3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HB" type="HBoxContainer" parent="NinePatchRect/MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves taken"
label_settings = ExtResource("3_feamh")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="NinePatchRect/MC/VB/HB"]
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_feamh")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control" type="Control" parent="NinePatchRect/MC/VB"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="NinePatchRect/MC/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_y5nwe")
texture_pressed = ExtResource("5_6aeub")
texture_hover = ExtResource("6_t8d6j")

[node name="Label" type="Label" parent="NinePatchRect/MC/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("7_jrfky")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NinePatchRect/MC/VB/ExitButton" to="." method="_on_exit_button_pressed"]
